--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+#  json_annotation:
   transparent_image: ^1.0.0
   page_transition: ^1.1.4
   basic_utils:
@@ -29,6 +29,7 @@ dependencies:
   google_maps_flutter: ^0.5.21+13
   dio: '3.0.6'
   image_picker: '0.6.1+4'
+  connectivity: ^0.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +38,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+#  build_runner:
+#  json_serializable:
 
 
 # For information on the generic Dart part of this file, see the
