--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="homemade"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyCd1-OMwpFJ3vDgrKIu3HBrCLSF24FCxJE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
