--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,14 @@ dependencies:
   connectivity: ^0.4.5
   shimmer:
   catcher: ^0.2.6
+  geolocator: ^5.1.5
+  permission: ^0.1.5
+  flutter_google_places: ^0.2.3
+  flutter_facebook_login: ^3.0.0
+  google_sign_in: ^4.0.1
+  firebase_messaging: ^6.0.3
+  flushbar: ^1.9.1
+  flutter_country_picker: ^0.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
