--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_messaging: ^6.0.3
   flushbar: ^1.9.1
   flutter_country_picker: ^0.1.6
-
+  smooth_star_rating: '1.0.3'
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -91,6 +91,7 @@ flutter:
    - assets/images/map.png
    - assets/images/menu.png
    - assets/images/menu_1.png
+   - assets/images/location.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
